logs/Slang/generated/yosys/simple_mem2reg.sv.log
name: simple_mem2reg
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:10:8: error: language feature not yet supported
always @* begin
       ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:72:3: error: language feature not yet supported
		input integer depth;
		^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:73:17: error: use of undeclared identifier 'depth'
		depth2Index = depth;
		              ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:76:22: error: too many arguments to subroutine call; expected 0 but 1 were provided
	assign intermediate[depth2Index(1)] = 1;
	                    ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:77:22: error: too many arguments to subroutine call; expected 0 but 1 were provided
	assign intermediate[depth2Index(2)] = 2;
	                    ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:80:32: error: too many arguments to subroutine call; expected 0 but 1 were provided
	assign result2 = intermediate[depth2Index(2)];
	                              ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:81:32: error: too many arguments to subroutine call; expected 0 but 1 were provided
	assign result3 = intermediate[depth2Index(3)];
	                              ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/mem2reg.v:104:16: error: language feature not yet supported
        always @* begin
               ^~
